			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02p: *********************************

IMP/MAN: (06/14/, GVG) New tileNot layers (1 for each metal, OD and poly) in TSMC90 technology (Bug #354)
Stipple patterns in such way they won't completely cover other tileNot nodes. The rest of the graphics
is inherited from corresponding metal/active/poly layer.

BUG: (06/13/05, GVG) Layers dialog should come up in current technology (Bug #367).
FIX: Extended PaletteFrame.autoTechnologySwitch for LayerTab and moved to WindowFrame class

BUG: (06/13/05, DN) Some changes are not undoable yet. They don't cause saving library.
FIX: Undo.otherChange() method to mark library for save.

IMP: (06/13/05, DN) When writing ELIB/ReadableDump, round arc angle to nearest. 

IMP: (06/12/05, DN) lowLevelAllocate/lowLevelPopulate methods removed from "ArcInst" and "Export".

BUG: (06/12/05, DN) Sometimes "LibDirs.LibDirFileSystemView.getFiles" causes
     "ClassNotFoundException".
FIX: Create factory method "LibDirs.newLibDirsFileSystemView".

************************* Version 8.02o: *********************************
IMP: (06/10/05, SMR) Can now import "GDS map" files to set layer associations (Bug #355).

IMP: (06/10/05, SMR) GDS now uses a "type" with each layer number (Bug #356).

BUG: (06/10/05, SMR) Spice output writes lower-level cells when upper-level ones
     have model file overrides (Bug #358).
FIX: Added model file overrides to the things checked by "skipCellAndSubcells()".

BUG: (06/10/05, GVG) Expection in NodeInst.findPortInstFromProto if index is invalid (Bug #359)
FIX: Make sure index is in the valid range and returns null otherwise.
     Side effect: extra code in Export.java to prevent exception if pi == null.

BUG: (06/09/05, GVG) Exception while generating eps from waveform (Bug #361)
FIX: After refactoring of Technology.getShapeOfNode, wnd can be null and then direct access