@@ -902,21 +902,6 @@ public class GenMath
     }
 
 //    /**
-//     * Method to compare two double-precision coordinates within an approximate epsilon.
-//     * <p>NOTE: If you are comparing Electric database units, DO NOT
-//     * use this method. Use the corresponding method from DBMath.
-//     * @param a the first point.
-//     * @param b the second point.
-//     * @return true if the points are approximately equal (to a few decimal places).
-//     */
-//    public static boolean pointsClose(Point2D a, Point2D b)
-//    {
-//        if (doublesClose(a.getX(), b.getX()) &&
-//                doublesClose(a.getY(), b.getY())) return true;
-//        return false;
-//    }
-
-//    /**
 //     * Method to round floating-point values to sensible quantities.
 //     * Rounds these numbers to the nearest thousandth.
 //     * @param a the value to round.
